--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	],
 	"activationEvents": [
 		"onCommand:react-intl-universal-i18n.i18nTransform",
+		"onCommand:react-intl-universal-i18n.i18nTransformAll",
 		"onCommand:react-intl-universal-i18n.i18nReload",
 		"onLanguage:javascriptreact",
 		"onLanguage:javascript",
@@ -50,6 +51,11 @@
 					"type": "boolean",
 					"default": false,
 					"description": "多语言文件修改是否开启监听模式"
+				},
+				"react-intl-universal-i18n.import":{
+					"type": "string",
+					"default": "import {intl} from '@/utils/js/locales';",
+					"description": "引入多语言对象的语句,默认 import {intl} from '@/utils/js/locales'; "
 				}
 			}
 		},
@@ -57,6 +63,10 @@
 			{
 				"command": "react-intl-universal-i18n.i18nTransform",
 				"title": "i18n语言转换"
+			},
+			{
+				"command": "react-intl-universal-i18n.i18nTransformAll",
+				"title": "i18n一键语言转换"
 			},
 			{
 				"command": "react-intl-universal-i18n.i18nReload",
@@ -73,19 +83,25 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.45.0",
+		"@types/babel__core": "^7.1.14",
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
-		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.26.0",
+		"@types/prettier": "^2.2.3",
+		"@types/vscode": "^1.45.0",
 		"@typescript-eslint/eslint-plugin": "^2.26.0",
+		"@typescript-eslint/parser": "^2.26.0",
+		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
 		"mocha": "^7.1.1",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
+		"@babel/parser": "^7.14.4",
+		"@babel/traverse": "^7.14.2",
+		"@babel/types": "^7.14.4",
+		"prettier": "^2.3.0",
 		"recast": "^0.19.1"
 	}
 }
